// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current job graph filling viewport 1`] = `
<FillViewportPlot
  cnt={3}
>
  <XAxis
    attr="x"
    attrAxis="y"
    orientation="bottom"
  />
  <YAxis
    attr="y"
    attrAxis="x"
    orientation="left"
    tickFormat={[Function]}
  />
  <HorizontalGridLines
    attr="y"
    direction="horizontal"
  />
  <VerticalGridLines
    attr="x"
    direction="vertical"
  />
  <HorizontalBarSeries
    className=""
    color="#795548"
    data={
      Array [
        Object {
          "part": "ddd",
          "x": 12,
          "y": 1,
        },
        Object {
          "part": "eee",
          "x": 7,
          "y": 2,
        },
        Object {
          "part": "fff",
          "x": 9,
          "y": 3,
        },
      ]
    }
    stack={false}
    style={Object {}}
  />
  <AbstractSeries
    animation={false}
    className=""
    customComponent={[Function]}
    data={
      Array [
        Object {
          "x": 40,
          "y": 1,
        },
        Object {
          "x": 33,
          "y": 2,
        },
        Object {
          "x": 24,
          "y": 3,
        },
      ]
    }
    stack={false}
    style={Object {}}
  />
</FillViewportPlot>
`;

exports[`current job graph scrollable 1`] = `
<ScrollablePlot
  cnt={3}
>
  <XAxis
    attr="x"
    attrAxis="y"
    orientation="bottom"
  />
  <YAxis
    attr="y"
    attrAxis="x"
    orientation="left"
    tickFormat={[Function]}
  />
  <HorizontalGridLines
    attr="y"
    direction="horizontal"
  />
  <VerticalGridLines
    attr="x"
    direction="vertical"
  />
  <HorizontalBarSeries
    className=""
    color="#795548"
    data={
      Array [
        Object {
          "part": "abc",
          "x": 10,
          "y": 1,
        },
        Object {
          "part": "def",
          "x": 11,
          "y": 2,
        },
        Object {
          "part": "zzz",
          "x": 16,
          "y": 3,
        },
      ]
    }
    stack={false}
    style={Object {}}
  />
  <AbstractSeries
    animation={false}
    className=""
    customComponent={[Function]}
    data={
      Array [
        Object {
          "x": 16,
          "y": 1,
        },
        Object {
          "x": 17,
          "y": 2,
        },
        Object {
          "x": 22,
          "y": 3,
        },
      ]
    }
    stack={false}
    style={Object {}}
  />
</ScrollablePlot>
`;

exports[`points for sample jobs 1`] = `
Object {
  "completedData": Array [
    Object {
      "part": "part1-2",
      "x": 16.5,
      "y": 0,
    },
    Object {
      "part": "part1-1",
      "x": 51.25,
      "y": 1,
    },
  ],
  "planData": Array [
    Object {
      "x": 61.5,
      "y": 0,
    },
    Object {
      "x": 102.5,
      "y": 1,
    },
  ],
}
`;
